2009-04-10 19:56  paddockd

	* makefile.linux24-display, src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio.h, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h: Fixed high/low received bytes counters
	  for STAT.
	  Added server_timestamp reporting to STAT.
	  Modified slimproto_set_jiffies to return timestamp.

2009-04-09 19:54  paddockd

	* ChangeLog, TODO, makefile.linux24-display,
	  patches/squeezecenter_squeezeslave_player3-7.4.patch,
	  src/slimaudio/slimaudio.c, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_decoder_mad.c,
	  src/slimaudio/slimaudio_output.c, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h, src/squeezeslave/squeezeslave.c:
	  Initial fix for controller/website play bar status resettings if
	  stream paused/unpaused.
	  Initial fix for squeezeslave not stopping at end of last track.
	  Needs more testing.
	  Added decoder tracks played to status message. Need to test if
	  this fixes scrobbling with lastfm only submitting first track.

2009-03-25 12:24  paddockd

	* ChangeLog, SqueezeSlave.wiki, TODO,
	  patches/squeezecenter_squeezeslave_player2-7.2.patch,
	  src/squeezeslave/squeezeslave.c: Added 7.2 version of
	  squeezecenter player patch.
	  Updates to slimdevices wiki.
	  Increased version to 41.

2009-03-14 11:14  paddockd

	* ChangeLog, SqueezeSlave.wiki, makefile.linux26-display,
	  patches/squeezecenter_squeezeslave_player-7.3.patch,
	  patches/squeezecenter_squeezeslave_player2-7.3.patch,
	  src/squeezeslave/squeezeslave.c: New linux26 OSS and display
	  makefile.
	  Added Slim Devices Wiki content for SqueezeSlave.
	  Added patches submitted with BUG-11330 to support player changes;
	  display, bit rate limit bug and replay gain fix.

2009-03-11 11:57  paddockd

	* ChangeLog, src/squeezeslave/squeezeslave.c: Bring squeezeslave
	  version in line with playertype changes.

2009-03-07 22:06  paddockd

	* ChangeLog, ReleaseNotes, makefile.linux24-debug,