@@ -44,12 +44,16 @@
 
 
 #ifdef SLIMPROTO_DEBUG
+extern FILE *debuglog;
 #define DEBUGF(...) if (slimaudio_debug) fprintf(stderr, __VA_ARGS__)
+#define DEBUGL(...) if (debug_logfile) fprintf(debuglog, __VA_ARGS__)
 #else
 #define DEBUGF(...)
+#define DEBUGL(...)
 #endif
 
 bool slimaudio_debug;
+extern bool debug_logfile;
 
 static int strm_callback(slimproto_t *p, const unsigned char *buf, int buf_len, void *user_data);
 static int vers_callback(slimproto_t *p, const unsigned char *buf, int buf_len, void *user_data);
@@ -171,6 +175,7 @@ static int strm_callback(slimproto_t *proto, const unsigned char *buf, int buf_l
 	slimproto_parse_command(buf, buf_len, &msg);
 
 	DEBUGF("strm cmd %c\n", msg.strm.command);
+	DEBUGL("strm cmd %c\n", msg.strm.command);
 
 	switch (msg.strm.command) {
 		case 's': /* start */
@@ -192,6 +197,9 @@ static int strm_callback(slimproto_t *proto, const unsigned char *buf, int buf_l
 			audio_stop(audio);
 			break;	
 		
+		case 'f': /* flush */
+			break;			
+
 		case 't': /* status */
 			break;			
 	}
