@@ -34,12 +34,16 @@
 
 
 #ifdef SLIMPROTO_DEBUG
+  extern FILE *debuglog;
   #define DEBUGF(...) if (slimaudio_output_debug) fprintf(stderr, __VA_ARGS__)
+  #define DEBUGL(...) if (debug_logfile) fprintf(debuglog, __VA_ARGS__)
 #else
   #define DEBUGF(...)
+  #define DEBUGL(...)
 #endif
 
 bool slimaudio_output_debug;
+extern bool debug_logfile;
 
 static void *output_thread(void *ptr);
 
@@ -269,6 +273,8 @@ static void *output_thread(void *ptr) {
 #else
 				audio->pa_streamtime_offset = Pa_GetStreamTime(audio->pa_stream);
 #endif
+				slimaudio_buffer_set_readopt(audio->output_buffer, BUFFER_BLOCKING);
+				DEBUGL("STOPPED: %f\n",audio->pa_streamtime_offset);
 			case PAUSED:
 				// We report ourselves to the server every few seconds
 				// as a keep-alive.  This is required for SqueezeCenter version 
@@ -296,6 +302,7 @@ static void *output_thread(void *ptr) {
 					}
 				}
 				break;
+				DEBUGL("PAUSED: %f\n",audio->pa_streamtime_offset);
 
 			case PLAY:
 /*
@@ -313,11 +320,14 @@ static void *output_thread(void *ptr) {
 				}
 
 				slimaudio_buffer_set_readopt(audio->output_buffer, BUFFER_NONBLOCKING);
+
+				DEBUGL("PLAY: %f\n",audio->pa_streamtime_offset);
 				audio->output_state = PLAYING;
 				pthread_cond_broadcast(&audio->output_cond);
 				break;
 
 			case BUFFERING:
+				DEBUGL("BUFFERING: %f\n",audio->pa_streamtime_offset);
 			case PLAYING:			
 				gettimeofday(&now, NULL);
 				timeout.tv_sec = now.tv_sec + 1;
@@ -325,13 +335,15 @@ static void *output_thread(void *ptr) {
 				err = pthread_cond_timedwait(&audio->output_cond, &audio->output_mutex, &timeout);
 
 				if (err == ETIMEDOUT) {
+					DEBUGL("STMt-PLAYING: %f\n",audio->pa_streamtime_offset);
 					output_thread_stat(audio, "STMt");
 				}
 					
 				if (audio->output_STMu) {
 					audio->output_STMu = false;
+
+					DEBUGL("STMu-PLAYING: %f\n",audio->pa_streamtime_offset);
 					output_thread_stat(audio, "STMu");
-					audio->output_state = STOP;
 				}
 					
 				if (audio->output_STMs) {
@@ -341,6 +353,7 @@ static void *output_thread(void *ptr) {
 #else
 					audio->pa_streamtime_offset = Pa_GetStreamTime(audio->pa_stream);
 #endif					
+					DEBUGL("STMs-PLAYING: %f\n",audio->pa_streamtime_offset);
 					output_thread_stat(audio, "STMs");
 				}
 
@@ -368,6 +381,8 @@ static void *output_thread(void *ptr) {
 				}
 #endif
 				audio->output_state = STOPPED;
+
+				DEBUGL("STOP: %f\n",audio->pa_streamtime_offset);
 				pthread_cond_broadcast(&audio->output_cond);
 				break;
 				
@@ -392,12 +407,14 @@ static void *output_thread(void *ptr) {
 					exit(-1);
 				}
 #endif
+				DEBUGL("PAUSE: %f\n",audio->pa_streamtime_offset);
 				audio->output_state = PAUSED;	
 				pthread_cond_broadcast(&audio->output_cond);
 				break;
 
 			case QUIT:
 				break;
+
 		}		
 	}
 	pthread_mutex_unlock(&audio->output_mutex);
@@ -540,6 +557,13 @@ u32_t slimaudio_output_streamtime(slimaudio_t *audio) {
 	DEBUGF("slimaudio_output_streamtime: streamtime=(%f - %f) * 1000 + %d = %d\n",
 		timeProgressed, audio->pa_streamtime_offset, audio->output_predelay_msec, msec);
 #endif
+	DEBUGL("outputstate:%d streamtime:%f st_offset:%f tplayed:%u predelay_msec:%u msec:%u\n",
+		audio->output_state, numSamples, audio->pa_streamtime_offset, audio->decode_num_tracks_started,
+		audio->output_predelay_msec, msec);
+#ifdef SLIMPROTO_DEBUG
+	fflush (debuglog);
+#endif
+
 	return msec < 0 ? 0 : msec;
 }
 
@@ -657,7 +681,6 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 				audio, (char*)outputBuffer + off, len - off);
 			continue;
 		}
-
 		int data_len = len-off;
 		const slimaudio_buffer_status ok = 
 			slimaudio_buffer_read(
@@ -666,9 +689,7 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 
 		if (ok == SLIMAUDIO_BUFFER_STREAM_END) {
 			/* stream closed */
-				
-			if (slimaudio_buffer_available(audio->output_buffer) 
-			    == 0) {
+			if (slimaudio_buffer_available(audio->output_buffer) == 0) {
 				pthread_mutex_lock(&audio->output_mutex);
 
 				// Send buffer underrun to SqueezeCenter. During
@@ -680,6 +701,7 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 				pthread_cond_broadcast(&audio->output_cond);
 				pthread_mutex_unlock(&audio->output_mutex);
 			}
+			DEBUGL("pa_callback: STREAM_END:output_STMu:%i\n",audio->output_STMu);
 		}
 		else if (ok == SLIMAUDIO_BUFFER_STREAM_START) {
 			pthread_mutex_lock(&audio->output_mutex);
@@ -687,11 +709,12 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 			// Send track start to SqueezeCenter. During normal play
 			// this advances the playlist.
 			audio->output_STMs = true;
+			DEBUGL("pa_callback: STREAM_START:output_STMs:%i\n",audio->output_STMs);
 
 			pthread_cond_broadcast(&audio->output_cond);
 			pthread_mutex_unlock(&audio->output_mutex);
-		}
 
+		}
 		off += data_len;
 
 		/* if we have underrun fill remaining buffer with silence */
@@ -701,10 +724,10 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 		}
 	}
 
+
 	const int uninitSize = len - off;
 	if (uninitSize > 0) {
-	 	DEBUGF("slimaudio_output: pa_callback uninitialized bytes: %i\n", 
-		       uninitSize);
+	 	DEBUGF("slimaudio_output: pa_callback uninitialized bytes: %i\n", uninitSize);
 		memset((char *)outputBuffer+off, 0, uninitSize);
 	}
 
@@ -712,9 +735,8 @@ static int pa_callback(  const void *inputBuffer, void *outputBuffer,
 		apply_software_volume(audio, outputBuffer, framesPerBuffer);
 	}
 
-//	printf("pa_callback complete framePerBuffer=%i n=%i\n", framesPerBuffer, n);
-	
+	DEBUGF("pa_callback complete framePerBuffer=%lu\n", framesPerBuffer);
+	DEBUGL("pa_callback complete framePerBuffer=%lu\n", framesPerBuffer);
+
 	return 0;
 }
-
-
